--- a/back-end/dockerfile
+++ b/back-end/dockerfile
@@ -10,6 +10,8 @@ RUN pip install -r requirements.txt
 
 RUN ./chatFlow/start.sh
 
+# ENV PYTHONUNBUFFERED=1
+
 EXPOSE 8443
 
 CMD [ "python", "manage.py", "runserver", "0.0.0.0:8443" ]
