--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,7 +8,8 @@
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
         "react-router-dom": "^6.6.0",
-        "redux": "^4.2.1"
+        "redux": "^4.2.1",
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "babel-loader": "^9.1.2",
@@ -22,7 +23,7 @@
         "webpack-dev-server": "^5.1.0"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts start --host 0.0.0.0",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
