--- a/back-end/dockerfile
+++ b/back-end/dockerfile
@@ -4,11 +4,11 @@ WORKDIR /back-end
 
 COPY . .
 
-RUN apt-get update -y && apt-get upgrade -y && chmod +x ./chatFlow/start.sh
+RUN apt-get update -y && apt-get upgrade -y && chmod +x ./start.sh
 
 RUN pip install -r requirements.txt
 
-RUN ./chatFlow/start.sh
+RUN ./start.sh
 
 # ENV PYTHONUNBUFFERED=1
 
