--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,14 @@ services:
     restart: on-failure
     volumes:
       - ./back-end:/back-end
+    depends_on:
+      - db
     ports:
       - "8443:8443"
+    env_file:
+      - ./back-end/.env
+    networks:
+      - local
   
   front-end:
     container_name: front-end
@@ -18,6 +24,34 @@ services:
       - ./front-end:/front-end
     ports:
       - "3000:3000"
+    env_file:
+      - ./back-end/.env
+    networks:
+      - local
+
+  db:
+    container_name: db
+    image: postgres:latest
+    restart: on-failure
+    ports:
+      - "5432:5432"
+    env_file:
+      - ./back-end/.env
+    volumes:
+      - ./db:/var/lib/postgresql/data
+    networks:
+      - local
+
+  pgadmin:
+    container_name: pgadmin
+    image: dpage/pgadmin4
+    restart: on-failure
+    env_file:
+      - ./back-end/.env
+    ports:
+      - "5050:80"
+    networks:
+      - local
 
 networks:
   local:
